@@ -43,5 +43,5 @@ rm -rf %{buildroot}
 %attr(644,root,root) /usr/share/man/man[58]/*
 
 %changelog
-* Tue Oct 18 2005 Brendan O'Dea <bod@optus.net> 2.1.10-1
+* Wed Oct 19 2005 Brendan O'Dea <bod@optus.net> 2.1.10-1
 - 2.1.10 release, see /usr/share/doc/l2tpns-2.1.10/Changes
